# codi

./: .gitignore  api_server.log.err  server.log.err  start_api_server.py  start_codi.ps1  test_server.py
.github/workflows/: docker-build.yml
codi-core/: README.md  requirements.txt  start_api_server.py
codi-core/agent/: __init__.py  action_parser.py  loop_controller.py  tools_manager.py
codi-core/agent/tools/: __init__.py  files.py  mcp.py  project.py  search.py  system.py  tasks.py  testing.py  web.py
codi-core/config/: deepspeed_config.json  model_config.yaml
codi-core/inference/: diagnostic.py  engine.py  server.py  vision_processor.py
codi-core/models/base/: README.md  added_tokens.json  chat_template.json  config.json  generation_config.json  model.safetensors.index.json  processor_config.json  special_tokens_map.json  tokenizer_config.json
codi-core/scripts/: check_r2.py  download_model.py  merge_lora.py  start_codi.ps1  start_codi.sh  train_full.sh
codi-core/training/: train_lora.py
codi-core/utils/: prepare_data.py
codi-extension/: .vscodeignore  package.json  tsconfig.json
codi-extension/src/: api.ts  chatPanel.ts  extension.ts
codi-studio/: index.html  package-lock.json  package.json  tailwind.config.js
codi-studio/src/: App.tsx  main.tsx
codi-studio/src-tauri/: Cargo.toml  tauri.conf.json
codi-studio/src-tauri/capabilities/: default.json
codi-studio/src-tauri/src/: main.rs
codi-studio/src/components/: ActivityBar.tsx  BottomPanel.tsx  CommandPalette.tsx  (+5 more)
runpod-deploy/: Dockerfile  build_and_push.sh  requirements.txt
(+26 files in other folders)
